feat(insulin): review day food links
